--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -12,7 +12,12 @@ that are available for crawling.
 
 Usage
 =====
-To use it you should add to your project pom
+
+You can try it by running in your project:
+
+    mvn ${project.groupId}:sitemapxml-maven-plugin:gen
+
+To use it during site build you should add to your project pom
 
     <project>
       ...
@@ -21,9 +26,9 @@ To use it you should add to your project pom
         <pluginManagement>
           <plugins>
             <plugin>
-              <groupId>com.github.s4u.plugins</groupId>
+              <groupId>${project.groupId}</groupId>
               <artifactId>sitemapxml-maven-plugin</artifactId>
-              <version>1.0.0</version>
+              <version>${project.version}</version>
             </plugin>
             ...
           </plugins>
@@ -32,7 +37,7 @@ To use it you should add to your project pom
         <!-- To use the plugin goals in your POM or parent POM -->
         <plugins>
           <plugin>
-            <groupId>com.github.s4u.plugins</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>sitemapxml-maven-plugin</artifactId>
             <executions>
                 <execution>
@@ -47,5 +52,3 @@ To use it you should add to your project pom
       </build>
       ...
     </project>
-
-Currently I don't know how prepare plugin to work without execution - goal configuration.
